--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/NumerHero/jQ-html5-audio-component#readme",
   "dependencies": {
     "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.3"
   }
 }
